fixed more contrast errors

--- a/main.css
+++ b/main.css
@@ -94,7 +94,8 @@
     color: white;
     list-style: none;
     font-family: "Abel";
-    font-size: 19px;
+    font-weight: bold;
+    font-size: 20px;
     margin-right: 70px;
     text-transform: uppercase;
     letter-spacing: 0.08em;
